MiniCompiladorWorkflow/tests/valid/test9.wf
tarea inicio { print("Salto"); ir_a destino; } tarea destino { print("Llegue"); }