MiniCompiladorWorkflow/tests/invalid/error4.wf
tarea inicio { print(var_no_definida); }
